Fix overflow from document editor body

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -154,7 +154,7 @@ html, body {
   @extend .p-lg;
 
   &:not(.readOnly) {
-    .title-input, .react-tags, .trix-editor {
+    .title-input, .react-tags {
       @extend .dim-on-hover;
     }
   }
